# photobooth

./: .gitignore  CMakeLists.txt  README.md
config/: parameters.yaml
include/: AbstractCameraDriver.h  CameraDriver.h  Email.h  EmailSender.h  PhotoBooth.h  camera_utils.h  photobooth.h
src/: CameraDriver.cpp  EmailSender.cpp  PhotoBooth.cpp  camera_utils.c  main.cpp  main.qml  photobooth.cpp
ui/: CapturePage.qml  Countdown.qml  DisplayPage.qml  EmailPage.qml  GetCapturePage.qml  StandbyPage.qml  main.qml
